--- a/papers/chi17.bib
+++ b/papers/chi17.bib
@@ -2,7 +2,7 @@
   author = {Tianyin Xu and Han Min Naing and Le Lu and Yuanyuan Zhou},
   title = "{How Do System Administrators Resolve Access-Denied Issues in the Real World?}",
   booktitle = "Proceedings of the 35th Annual CHI Conference on Human Factors in Computing Systems (CHI'17)",
-  address = "Denver, CO, USA",
+  address = "Denver, CO",
   month = "May",
   year =  2017,
 }
