--- a/papers/nsdi16.bib
+++ b/papers/nsdi16.bib
@@ -2,7 +2,7 @@
    author = {Zhenhua Li and Weiwei Wang and Tianyin Xu and Xin Zhong and Xiang-Yang Li and Yunhao Liu and Christo Wilson and Ben Y. Zhao},
    title = "{Exploring Cross-Application Cellular Traffic Optimization with Baidu TrafficGuard}",
    booktitle = "Proceedings of the 13th USENIX Symposium on Networked Systems Design and Implementation (NSDI'16)",
-   address = "Santa Clara, CA, USA",
+   address = "Santa Clara, CA",
    month = "March",
    year =  2016,
 }
