--- a/papers/osdi16.bib
+++ b/papers/osdi16.bib
@@ -2,7 +2,7 @@
   author = {Tianyin Xu and Xinxin Jin and Peng Huang and Yuanyuan Zhou and Shan Lu and Long Jin and Shankar Pasupathy},
   title = "{Early Detection of Configuration Errors to Reduce Failure Damage}",
   booktitle = {Proceedings of the 12th USENIX Symposium on Operating Systems Design and Implementation (OSDI'16)},
-  address="Savannah, GA, USA",
+  address="Savannah, GA",
   month = "November",
   year = 2016,
 }
