--- a/papers/asplos14.bib
+++ b/papers/asplos14.bib
@@ -2,7 +2,7 @@
   author = {Jiaqi Zhang and Lakshmi Renganarayana and Xiaolan Zhang and Niyu Ge and Vasanth Bala and Tianyin Xu and Yuanyuan Zhou},
   title = "{EnCore: Exploiting System Environment and Correlation Information for Misconfiguration Detection}",
   booktitle = {Proceedings of the 19th International Conference on Architecture Support for Programming Languages and Operating Systems (ASPLOS'14)},
-  address="Salt Lake City, UT, USA",
+  address="Salt Lake City, UT",
   month = "March",
   year = {2014},
 }
