--- a/papers/icnp12.bib
+++ b/papers/icnp12.bib
@@ -2,7 +2,7 @@
    author = {Lei Jiao and Jun Li and Tianyin Xu and Xiaoming Fu},
    title = "{Optimizing Cost for Online Social Networks on Geo-Distributed Clouds}",
    booktitle = "Proceedings of the 20th IEEE International Conference on Network Protocols (ICNP'12)",
-   address = "Austin, Texas",
+   address = "Austin, TX",
    month = "Octomber",
    year =  2012,
 }
