--- a/papers/sosp13.bib
+++ b/papers/sosp13.bib
@@ -2,7 +2,7 @@
    author = {Tianyin Xu and Jiaqi Zhang and Peng Huang and Jing Zheng and Tianwei Sheng and Ding Yuan and Yuanyuan Zhou and Shankar Pasupathy},
    title = "{Do Not Blame Users for Misconfigurations}",
    booktitle = {Proceedings of the 24th Symposium on Operating System Principles (SOSP'13)},
-   address="Farmington, PA, USA",
+   address="Farmington, PA",
    month = "November",
    year = 2013,
 }
